--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-12 col-md-6 d-flex align-items-center justify-content-start">
         <a routerLink="/main" class="text-decoration-none">
-          <h1>Internship</h1>
+          <h1>Blog</h1>
         </a>
       </div>
       <div class="col-12 col-md-6 d-flex align-items-center justify-content-end">
