--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -5,11 +5,14 @@ button {
     padding: 10px 20px;
     border-radius: 5px;
     transition: background-color 0.3s ease, transform 0.3s ease;
-
 }
 
 button:hover {
     background-color: red;
     transform: scale(1.05);
     color: black;
+}
+
+table{
+    height:100vh;
 }
